# Chess

./: README.md
SourceFiles/: CMakeLists.txt
SourceFiles/program/: CMakeLists.txt
SourceFiles/program/src/: main.cpp
